# ros_introduction

agitr/: CMakeLists-oldbackup.txt  CMakeLists.txt  example.launch  package.xml
agitr/src/: hello.cpp  pubvel.cpp  subpose.cpp  vel_printer.cpp
bags/: cmd_filtered_velocities.bag  printer_and_filter.bag
chapter3/: CMakeLists.txt  package.xml
chapter3/src/: vel_filter.cpp  vel_printer.cpp
chapter6/: CMakeLists.txt  package.xml  velocities.launch  velocities_include.launch
chapter7/: CMakeLists.txt  package.xml
chapter7/src/: vel_filter.cpp
learning_tf2/: CMakeLists.txt  package.xml  start_demo.launch
learning_tf2/src/: frame_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
my_robot_name_2dnav/: package.xml
